# data_wrangler

./: .gitignore  Dockerfile  README.md  normalize_contacts.py  pyproject.toml  requirements.txt
data_wrangler/core/: constants.py  exceptions.py  normalizer.py
data_wrangler/core/strategies/: base.py  date_strategies.py  phone_strategies.py
data_wrangler/utils/: csv_utils.py
results/: normalized_contacts_20250919_211753.csv
tests/: test_normalizers.py
